CONTAINER ORCHESTRATION – NETWORKING/ingress-controller-service.yaml
apiVersion: vl
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
selector:
  name: nginx-ingress
